--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <nav aria-label="Main navigation">
                 <a href="#home">Home</a>
                 <a href="#reviews">Reviews</a>
-                <a href="#download">Download</a>
+                <a href="https://lockedapp.org/cl/i/m5e5x8">Download</a>
             </nav>
         </div>
     </header>
@@ -398,8 +398,8 @@
         <!-- Hero Section -->
         <section class="hero" id="home" aria-labelledby="game-title">
             <div class="hero-content">
-                <h1 id="game-title">Shadow Runner: Neon Escape</h1>
-                <p>Fast-paced cyber-parkour game. Dash across rooftops, dodge drones, and master neon power-ups to escape the city's AI security grid.</p>
+                <h1 id="game-title">Coin Master [Unlimited Coins, Spins, Unlocked]</h1>
+                <p>In the Android gaming market, Casual games have grown at a massive rate and have been downloaded by billions of guys worldwide. These games are everyone's favorite since they are small in size and as well as the best gaming genre for time killing.</p>
                 
                 <div class="platforms" aria-label="Available platforms">
                     <span class="badge">
@@ -417,11 +417,11 @@
                     <span class="review-count">(2,318 reviews)</span>
                 </div>
 
-                <a href="#download" class="cta-button" id="download">Download Now</a>
+                <a href="https://lockedapp.org/cl/i/m5e5x8" class="cta-button" id="download">Download Now</a>
             </div>
 
             <div class="game-card">
-                <img src="https://picsum.photos/600/400?random=1" alt="Shadow Runner: Neon Escape - Game cover showing a neon-lit cyberpunk cityscape with a parkour character">
+                <img src="./image/Coin Master.jpg" alt="Shadow Runner: Neon Escape - Game cover showing a neon-lit cyberpunk cityscape with a parkour character">
             </div>
         </section>
 
