--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <div class="logo">gamesHup</div>
+            <div class="logo">gamesHupp</div>
             <nav aria-label="Main navigation">
                 <a href="#home">Home</a>
                 <a href="#reviews">Reviews</a>
